Writing setup, almost complete

--- a/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
+++ b/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
@@ -4,7 +4,7 @@
 \subsection{Messung der Lichtgeschwindigkeit nach Michelson}
 
 In diesem Versuch wird die Lichtgeschwindigkeit nach der Methode von Michelson
-(Abbildung  \ref{fig:michelson}  gemessen. Dabei  wird ein  Laserstrahl  durch
+(Abbildung  \ref{fig:michelson}) gemessen. Dabei  wird  ein Laserstrahl  durch
 verschiedene  Linsen, Spiegeln  und  Blenden  hin- und  zur\"uckgeschickt. Ein
 Spiegel, $DS$,  wird mit einem  Motor bei verschiedenen,  bekannten Drehzahlen
 rotiert.  Da das Licht endlich schnell ist, wird der Drehspiegel einen anderen
@@ -16,7 +16,7 @@ Lichtgeschwindigkeit berechnet werden.
 
 \begin{figure}[H]
     \center
-    \includegraphics[width=\textwidth]{svg/michelson.pdf}
+    \includegraphics[width=\textwidth]{images/michelson.pdf}
     \caption{Versuchsaufbau nach Michelson. Auszug aus der Aufgabenstellung.}
     \label{fig:michelson}
 \end{figure}
@@ -27,13 +27,13 @@ ist.
 
 \begin{figure}[H]
     \center
-    \includegraphics[width=\textwidth]{svg/linsenkonfig.pdf}
-    \caption{\"Aquivalente Linsenkonfiguration des Versuchs. Auszug us der Aufgabenstelung}
+    \includegraphics[width=\textwidth]{images/linsenkonfig.pdf}
+    \caption{\"Aquivalente Linsenkonfiguration des Versuchs. Auszug aus der Aufgabenstelung}
     \label{fig:linsenkonfig}
 \end{figure}
 
 Bei rotierendem Spiegel  findet das vom Endspiegel  zur\"uckkehrende Licht den
-Drehspiegel wegen  der endlichen  Laufzeit um  einene Kleinen  Winkel $\delta$
+Drehspiegel  wegen der  endlichen Laufzeit  um einen  kleinen Winkel  $\delta$
 gedreht
 
 \begin{equation}
@@ -44,8 +44,8 @@ gedreht
 wobei $\omega$ die Kreisfrequenz des  Drehspiegels und $\Delta t$ die Laufzeit
 des Lichtes  vom Drehspiegel  zum Endspiegel  und zur\"uck  bezeichnen.  Diese
 Drehung  des  Spiegels  hat  eine  Richtungs\"anderung  der  B\"undelachse  um
-den  Winkel $2\delta$  (wegen dem  Reflexionsgesetz, ersichtlich  in Abbildung
-\ref{fig:reflexionsgesetz})  und damit  eine  seitliche  Verschiebung $x$  des
+den Winkel $2\delta$  (Reflexionsgesetz, Abbildung \ref{fig:reflexionsgesetz},
+$\alpha=\alpha' \to  2\delta$) und damit  eine seitliche Verschiebung  $x$ des
 Bildes des Spaltes zur Folge.
 
 \begin{figure}[H]
