Added plots to 'messungen'

--- a/versuche/lichtgeschwindigkeit/sections/durchfuehrung.tex
+++ b/versuche/lichtgeschwindigkeit/sections/durchfuehrung.tex
@@ -39,34 +39,33 @@ Die gemessene H\"ohen betrugen nach der Anpassung
     & $h_4 = (\bar{h}_4 \pm s_{\bar{h}_4}) = (895\pm1)\textrm{mm}$ \\
 \end{tabular}
 
-In der Abbildung \ref{fig:setup} ist eine Skizze der Messeinrichtung.
+In   der   Abbildung   \ref{fig:setup}  ist  eine  Skizze  der  Messeinrichtung.
 
-Der  Umlenkspiegel  $US$  wird  nun  in  den  Laserstrahl  platziert  und  auf
-den  Zentrum  des Drehspiegels  $DS$  ausgerichtet.   Durch Feinjustieren  des
-Umlenkspiegels  $US$   kann  der  Laserstrahl   genau  auf  den   Zentrum  des
-Drehspiegels $DS$ ausgerichtet werden.
+Der Umlenkspiegel $US$ wird nun in den Laserstrahl platziert und auf den Zentrum
+des  Drehspiegels $DS$ ausgerichtet. Durch Feinjustieren des Umlenkspiegels $US$
+kann  der  Laserstrahl  genau auf den Zentrum des Drehspiegels $DS$ ausgerichtet
+werden.
 
-Der  Motor des  Drehspiegels wird  von Hand  rotiert bis  der Drehspiegel  den
-Laserstrahl genau auf den Zentrum des Hohlspiegels $HS$ umlenkt.
+Der  Motor  des  Drehspiegels  wird  von  Hand  rotiert  bis der Drehspiegel den
+Laserstrahl   genau   auf   den   Zentrum   des   Hohlspiegels   $HS$   umlenkt.
 
-Nun  wird  der  Hohlspiegel  $HS$  angepasst  und  feinjustiert,  bis  er  den
-Strahl auf  dem Zentrum  des Endspiegels $ES$  umlenkt. Dabei ist  es wichtig,
-dass  die  Distanz   zwischen  den  Spiegeln  $HS$  und  $ES$   genau  $f_2  =
-(4985\pm5)\textrm{mm}$ betr\"agt. Der Endspiegel $ES$ wurde verschoben und mit
-einem  Laserdistanzmessger\"at wurde  die Distanz  auf $(4.988\pm3)\textrm{m}$
-gemessen.
+Nun  wird der Hohlspiegel $HS$ angepasst und feinjustiert, bis er den Strahl auf
+dem Zentrum des Endspiegels $ES$ umlenkt. Dabei ist es wichtig, dass die Distanz
+zwischen  den  Spiegeln  $HS$  und  $ES$  genau  $f_2  =  (4985\pm5)\textrm{mm}$
+betr\"agt.    Der    Endspiegel    $ES$   wurde   verschoben   und   mit   einem
+Laserdistanzmessger\"at  wurde die Distanz auf $(4.988\pm3)\textrm{m}$ gemessen.
 
-Nun  wird  der  Endspiegel  $ES$  feinjustiert,  bis  der  Laserstrahl  wieder
-direkt  auf  den Hohlspiegel  $HS$  zur\"uckreflektiert  wird. Ist der  Strahl
-auf  den  Hohlspiegel ausgerichtet,  so  schaut  man  auf den  Drehspiegel  um
-den  zur\"uckreflektierenden Laserstrahl  weiter feiner  einzustellen. Ist sie
-auf  den Drehspiegel  genug  genau  ausgerichtet, schaut  man  weiter auf  den
-Umlenkspiegel $US$ und  kann somit wieder durch  feinjustieren des Endspiegels
-$ES$ den Strahl noch weiter genauer ausrichten.
+Nun wird der Endspiegel $ES$ feinjustiert, bis der Laserstrahl wieder direkt auf
+den   Hohlspiegel   $HS$  zur\"uckreflektiert  wird.  Ist  der  Strahl  auf  den
+Hohlspiegel   ausgerichtet,   so   schaut   man   auf  den  Drehspiegel  um  den
+zur\"uckreflektierenden  Laserstrahl weiter feiner einzustellen. Ist sie auf den
+Drehspiegel  genug  genau  ausgerichtet, schaut man weiter auf den Umlenkspiegel
+$US$  und  kann somit wieder durch feinjustieren des Endspiegels $ES$ den Strahl
+noch weiter genauer ausrichten.
 
-Nun wird der Strahlteiler in den Laserstrahl eingef\"ugt, in der n\"ahe des
+Nun  wird  der  Strahlteiler  in  den Laserstrahl eingef\"ugt, in der n\"ahe des
 Messokulars. Wenn alles stimmt, m\"usste der zur\"uckreflektierender Laserstrahl
-nun durch das Messokular strahlen und auf die Wand auftreffen.
+nun   durch   das   Messokular   strahlen   und   auf   die   Wand   auftreffen.
 
 \begin{figure}[H]
     \center
@@ -97,4 +96,17 @@ Gemessen wurde die Distanz von der Linse $L_1$ zum Spalt $(998\pm3)\textrm{mm}$.
 
 \subsection{Messungen}
 
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/w-x-alex.pdf}
+    \caption{}
+    \label{fig:w-x-alex}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/w-x-yohannes.pdf}
+    \caption{}
+    \label{fig:w-x-yohannes}
+\end{figure}
 
