Added final deckblatt, also finished durchfuehrung

--- a/laborjournal.tex
+++ b/laborjournal.tex
@@ -6,7 +6,8 @@
 \usepackage{pdfpages}
 
 \begin{document}
-    \input{titlepage/titlepage.tex}
+    %\input{titlepage/titlepage.tex}
+    \includepdf[pages=-]{titlepage/deckblatt.pdf}
     \includepdf[pages=-]{formelsammlung/formelsammlung.pdf}
     \includepdf[pages=-]{versuche/computerversuch/computerversuch.pdf}
 \end{document}
