--- a/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
+++ b/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
@@ -88,7 +88,7 @@ dementsprechend eine vertikale Verschiebung des Bildes.
 \begin{figure}[H]
     \center
     \includegraphics[width=.8\textwidth]{images/lense-simulation.png}
-    \caption{}
+    \caption{Verhalten von Lichtstrahlen bei unterschiedlichen Einstrahlwinkel}
     \label{fig:lense-simulation}
 \end{figure}
 
