--- a/versuche/lichtgeschwindigkeit/sections/auswertung.tex
+++ b/versuche/lichtgeschwindigkeit/sections/auswertung.tex
@@ -92,3 +92,20 @@
     \end{subtable}
 \end{table}
 
+
+\subsection{Messergebnisse}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/w-x-alex.pdf}
+    \caption{XY-Scatter Plot von $\omega$ und $x$, gemessen von Alex Murray}
+    \label{fig:w-x-alex}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/w-x-yohannes.pdf}
+    \caption{XY-Scatter Plot von $\omega$ und $x$, gemessen von Yohannes Measho}
+    \label{fig:w-x-yohannes}
+\end{figure}
+
