Re-did all of the plots, exported fits for c, b, and a, both for Alex Murray and Yohannes Measho

--- a/versuche/lichtgeschwindigkeit/sections/auswertung.tex
+++ b/versuche/lichtgeschwindigkeit/sections/auswertung.tex
@@ -97,15 +97,43 @@
 
 \begin{figure}[H]
     \center
-    \includegraphics[width=.8\textwidth]{images/w-x-alex.pdf}
-    \caption{XY-Scatter Plot von $\omega$ und $x$, gemessen von Alex Murray}
-    \label{fig:w-x-alex}
+    \includegraphics[width=.8\textwidth]{images/am-f-x-fit-c.pdf}
+    \caption{Lineare Regression zur Berechnung der Lichtgeschwindigkeit $c$, Messdaten von Alex Murray}
+    \label{fig:am-f-x-fit-c}
 \end{figure}
 
 \begin{figure}[H]
     \center
-    \includegraphics[width=.8\textwidth]{images/w-x-yohannes.pdf}
-    \caption{XY-Scatter Plot von $\omega$ und $x$, gemessen von Yohannes Measho}
-    \label{fig:w-x-yohannes}
+    \includegraphics[width=.8\textwidth]{images/ym-f-x-fit-c.pdf}
+    \caption{Lineare Regression zur Berechnung der Lichtgeschwindigkeit $c$, Messdaten von Yohannes Measho}
+    \label{fig:ym-f-x-fit-c}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/am-f-x-fit-b.pdf}
+    \caption{Lineare Regression zur Berechnung des Faktors $b$, Messdaten von Alex Murray}
+    \label{fig:am-f-x-fit-b}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/ym-f-x-fit-b.pdf}
+    \caption{Lineare Regression zur Berechnung des Faktors $b$, Messdaten von Yohannes Measho}
+    \label{fig:ym-f-x-fit-b}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/am-x-z-fit-a.pdf}
+    \caption{Lineare Regression zur Berechnung des Faktors $a$ anhand der Kalibrationsmessung, Messdaten von Alex Murray}
+    \label{fig:am-x-z-fit-a}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/ym-x-z-fit-a.pdf}
+    \caption{Lineare Regression zur Berechnung des Faktors $a$ anhand der Kalibrationsmessung, Messdaten von Yohannes Measho}
+    \label{fig:ym-x-z-fit-a}
 \end{figure}
 
