Added kalibration drawing

--- a/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
+++ b/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
@@ -1,17 +1,16 @@
 \section{Arbeitsgrundlagen}
 
-
 \subsection{Messung der Lichtgeschwindigkeit nach Michelson}
 
-In diesem Versuch wird die Lichtgeschwindigkeit nach der Methode von Michelson
-(Abbildung  \ref{fig:michelson}) gemessen. Dabei  wird  ein Laserstrahl  durch
-verschiedene  Linsen, Spiegeln  und  Blenden  hin- und  zur\"uckgeschickt. Ein
-Spiegel, $DS$,  wird mit einem  Motor bei verschiedenen,  bekannten Drehzahlen
-rotiert.  Da das Licht endlich schnell ist, wird der Drehspiegel einen anderen
-Winkel haben  nach Zur\"uckreflektieren  des Lichtstrahls vom  Endspiegel $ES$
-und verursacht somit eine Verschiebung des Zur\"uckkommenden Laserstrahls. Ist
-die  Distanz  zwischen  Endspiegel  und  Drehspiegel $f_2  +  S_2$  sowie  die
-Drehzahl  $\omega$  bekannt,  so  kann  durch  Messung  der  Verschiebung  die
+In  diesem Versuch wird die Lichtgeschwindigkeit nach der Methode von  Michelson
+(Abbildung  \ref{fig:michelson}) gemessen.  Dabei  wird  ein  Laserstrahl  durch
+verschiedene  Linsen,  Spiegeln  und  Blenden  hin- und  zur\"uckgeschickt.  Ein
+Spiegel, $DS$, wird mit einem  Motor  bei  verschiedenen,  bekannten  Drehzahlen
+rotiert.  Da  das Licht endlich schnell ist, wird der Drehspiegel einen  anderen
+Winkel haben nach Zur\"uckreflektieren  des Lichtstrahls vom Endspiegel $ES$ und
+verursacht somit eine Verschiebung  des  Zur\"uckkommenden Laserstrahls. Ist die
+Distanz  zwischen  Endspiegel  und  Drehspiegel $f_2 + S_2$ sowie  die  Drehzahl
+$\omega$ bekannt, so kann durch Messung der Verschiebung die
 Lichtgeschwindigkeit berechnet werden.
 
 \begin{figure}[H]
@@ -21,9 +20,8 @@ Lichtgeschwindigkeit berechnet werden.
     \label{fig:michelson}
 \end{figure}
 
-Der Versuch  nach Michelson kann mit  einer \"Aquivalenten Linsenkonfiguration
-dargestellt werden,  wie in  der Abbildung  \ref{fig:linsenkonfig} ersichtlich
-ist.
+Der  Versuch  nach  Michelson kann mit einer \"Aquivalenten  Linsenkonfiguration
+dargestellt werden, wie in der Abbildung \ref{fig:linsenkonfig} ersichtlich ist.
 
 \begin{figure}[H]
     \center
@@ -32,8 +30,8 @@ ist.
     \label{fig:linsenkonfig}
 \end{figure}
 
-Bei rotierendem Spiegel  findet das vom Endspiegel  zur\"uckkehrende Licht den
-Drehspiegel  wegen der  endlichen Laufzeit  um einen  kleinen Winkel  $\delta$
+Bei rotierendem Spiegel findet  das  vom  Endspiegel  zur\"uckkehrende Licht den
+Drehspiegel wegen der  endlichen  Laufzeit  um  einen  kleinen  Winkel  $\delta$
 gedreht
 
 \begin{equation}
@@ -41,11 +39,11 @@ gedreht
     \label{eq:delta}
 \end{equation}
 
-wobei $\omega$ die Kreisfrequenz des  Drehspiegels und $\Delta t$ die Laufzeit
-des Lichtes  vom Drehspiegel  zum Endspiegel  und zur\"uck  bezeichnen.  Diese
-Drehung  des  Spiegels  hat  eine  Richtungs\"anderung  der  B\"undelachse  um
-den Winkel $2\delta$  (Reflexionsgesetz, Abbildung \ref{fig:reflexionsgesetz},
-$\alpha=\alpha' \to  2\delta$) und damit  eine seitliche Verschiebung  $x$ des
+wobei  $\omega$  die Kreisfrequenz des Drehspiegels und $\Delta t$ die  Laufzeit
+des  Lichtes  vom  Drehspiegel zum Endspiegel  und  zur\"uck  bezeichnen.  Diese
+Drehung des Spiegels  hat  eine  Richtungs\"anderung  der  B\"undelachse  um den
+Winkel   $2\delta$  (Reflexionsgesetz,   Abbildung   \ref{fig:reflexionsgesetz},
+$\alpha=\alpha'  \to  2\delta$)  und  damit eine seitliche Verschiebung $x$  des
 Bildes des Spaltes zur Folge.
 
 \begin{figure}[H]
@@ -55,8 +53,8 @@ Bildes des Spaltes zur Folge.
     \label{fig:reflexionsgesetz}
 \end{figure}
 
-F\"ur   das    Verst\"andnis   des   Strahlenganges   ben\"otigen    wir   die
-Abbildungsgleichung und den Abbildungsmassstab $\beta$ f\"ur d\"unne Linsen.
+F\"ur   das   Verst\"andnis    des    Strahlenganges    ben\"otigen    wir   die
+Abbildungsgleichung und  den  Abbildungsmassstab  $\beta$  f\"ur d\"unne Linsen.
 
 \begin{equation}
     \frac{1}{f} = \frac{1}{g} + \frac{1}{b}
@@ -65,9 +63,9 @@ Abbildungsgleichung und den Abbildungsmassstab $\beta$ f\"ur d\"unne Linsen.
     \label{eq:optik}
 \end{equation}
 
-Wobei  $f$  die   Brennweite,  $g$  die  Gegenstandsweite   (Abstand  Linse  -
-Gegenstand),   $b$  die   Bildweite,  $B$   die  Bildgr\"osse   und  $G$   die
-Gegenstandsgr\"osse bezeichnen.
+Wobei $f$ die Brennweite, $g$ die Gegenstandsweite (Abstand Linse - Gegenstand),
+$b$  die  Bildweite,  $B$  die  Bildgr\"osse  und  $G$  die  Gegenstandsgr\"osse
+bezeichnen.
 
 Da die Kleinwinkeln\"aherung $\sin\theta \approx \tan\theta \approx \theta$ in
 unserem Falle sicher zul\"assig ist, gilt
@@ -79,16 +77,29 @@ und damit
     c = 4\omega \cdot \frac{(S_2 + f_2)f_1}{x}
 \end{equation}
 
-Eine   sch\"one  Visualisierung   der  Verschiebung   in  Abh\"angigkeit   des
-einstrahlwinkels  kann  in  der Abbildung  \ref{fig:lense-simulation}  gesehen
-werden\footcite{ref:linsen-simulation}. Die   weissen   Linien  strahlen   mit
-einem  anderen Winkel  als  die  gelbe Linien  in  die  Linse und  verursachen
-dementsprechend eine vertikale Verschiebung des Bildes.
+Diese Formel muss f\"ur die linearen Regression angepasst werden, weil die Millimeterschrauben einen unbekannten Offset hat.
+\begin{equation}
+    c = 4\omega \cdot \frac{(S_2 + f_2)f_1}{x - x_0}
+    \label{eq:lichtgeschwindigkeit}
+\end{equation}
+
+Eine   sch\"one   Visualisierung   der   Verschiebung   in   Abh\"angigkeit  des
+einstrahlwinkels  kann  in  der   Abbildung  \ref{fig:lense-simulation}  gesehen
+werden\footcite{ref:linsen-simulation}. Die  weissen  Linien  strahlen mit einem
+anderen Winkel als die gelbe Linien in die Linse und verursachen dementsprechend
+eine vertikale Verschiebung des Bildes.
 
 \begin{figure}[H]
     \center
     \includegraphics[width=.8\textwidth]{images/lense-simulation.png}
     \caption{Verhalten von Lichtstrahlen bei unterschiedlichen Einstrahlwinkel}
     \label{fig:lense-simulation}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=.8\textwidth]{images/kalibration.pdf}
+    \caption{Messanordnung Kalibration}
+    \label{fig:kalibration}
 \end{figure}
 
