Adding calibration stuff to arbeitsgrundlagen

--- a/versuche/lichtgeschwindigkeit/preamble/packages.tex
+++ b/versuche/lichtgeschwindigkeit/preamble/packages.tex
@@ -11,3 +11,5 @@
 \usepackage{subcaption}
 \usepackage{pdfpages}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
+\usepackage{dirtytalk}
+
