--- a/versuche/lichtgeschwindigkeit/sections/durchfuehrung.tex
+++ b/versuche/lichtgeschwindigkeit/sections/durchfuehrung.tex
@@ -1,6 +1,6 @@
 \section{Durchf\"uhrung}
 
-\subsection{Versuchsanordnung}
+\subsection{Versuchsanordnung Lichtgeschwindigkeitsmessung}
 
 Der Laser  wurde eingeschaltet und  der Umlenkspiegel wurde so  angepasst, bis
 der Laserstrahl parallel zur langen Tischkante verlaufte, was in der Abbildung
@@ -109,6 +109,11 @@ Danach  wird  das  Filter  gedreht und der Laserstrahl abgeschw\"acht, damit der
 Messvorgang   auch   ohne   Massensterben   von  Netzhautzellen  erfolgen  kann.
 
 
+\subsection{Versuchsanordnung Kalibrationsmessung}
+
+
+
+
 \subsection{Messmethoden}
 
 In  der  Tabelle  \ref{tab:messgeraete}  sind  alle  Ger\"ate  aufgelistet,  die
@@ -131,7 +136,7 @@ Toleranzen  sind grossz\"ugig angegeben.
 \end{center}
 
 Es ist zu beachten dass je nach Art der
-Messung die Toleranz nochmals abnimmt, wie zum Beispiel beim Messen des Abstands
+Messung die Toleranz nochmals zunimmt, wie zum Beispiel beim Messen des Abstands
 des Laserstrahls. Die gesch\"atzten Toleranzen sind bei jeder Messung angegeben.
 
 
