section Auswertung finished I think2

--- a/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
+++ b/versuche/lichtgeschwindigkeit/sections/arbeitsgrundlagen.tex
@@ -123,7 +123,8 @@ Mikrometerschraube um $z$ resultiert damit ein Winkel
 
 Auch hier gilt f\"ur die lineare Regression die Formel
 \begin{equation}
-    x = a \cdot \varphi_{Spiegel} + x_{01}
+    x = a \cdot \varphi_{Spiegel} + x_{01} = \frac{a}{l} + x_{01}
+    \label{eq:kalibration-a}
 \end{equation}
 
 Setzt man das in der Formel  \ref{eq:lichtgeschwindigkeit} ein, erh\"alt man mit
